# lambda-gtfsrt

./: .gitignore  README.md  babel.config.js  cli.Dockerfile  gen-pkl.sh  gen-proto.sh  gtfs-api.proto  index.ts  jest.config.js  output.proto  package-lock.json  package.json  t.ts  test.ts  tsconfig.json  web.Dockerfile
.github/workflows/: build.yml  test.pkl  test.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  build.rs
core/src/: errors.rs  fetcher.rs  lib.rs  libs.rs  models.rs  orchestrator.rs  secrets.rs  uploader.rs
core/src/generator/: base.rs  generic.rs  mod.rs  route_generator.rs  stale.rs  stop_generator.rs
lambda/: Cargo.toml  Cross.toml
lambda/src/: build.rs  main.rs  secrets.rs  uploader.rs
proto/: output.proto  trip-index.proto
src/: generator.ts  gtfs-api.d.ts  gtfs-api.js  gtfs-rt.js  gtfsrt.js  models.ts  orchestrator.ts  scraper.ts  uploader.ts
src/generator/: generator.ts  route-generator.ts  stop-generator.ts
src/proto/: gtfs-rt.d.ts  gtfs-rt.js  output.d.ts  output.js  trip-index.d.ts  trip-index.js
terraform/: .terraform.lock.hcl  cloudwatch.tf  dynamodb.tf  gateway.tf  iam.tf  lambda.tf  main.tf  schedule.tf
test_data/: trip-index.pb
tests/generator/: route-generator.test.ts  stop-generator.test.ts
web/: Cargo.toml
web/src/: dependencies.rs  main.rs  params.rs
web/src/live/: controller.rs  live_repository.rs  mod.rs  repository.rs
