[package]
name = "gtfsrt-processor-web"
version = "0.1.0"
edition = "2024"

[dependencies]
gtfsrt-processor-core = { path = "../core" }
chrono = "0.4.41"
tokio = { version = "1.46.1", features = ["full"] }
poem = "3.1.11"
async-trait = "0.1.88"
moka = { version = "0.12.10", features = ["future"] }
thiserror = "2.0.12"
reqwest = "0.12.22"
aws-sdk-s3 = "1.96.0"
aws-config = "1.8.1"
aws-sdk-ssm = "1.83.0"
